# PyA3EDA

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  security.yml
docs/: index.md
docs/api/: config.md  constants.md  errors.md  exporter.md  ids.md  index.md  pipeline.md  registry.md  runner.md  status.md  utils.md
docs/api/builder/: inputs.md  molecule.md  rem.md
docs/api/extractor/: barriers.md  data.md  dimer.md  stages.md
docs/api/parser/: qchem.md  xyz.md
docs/api/plotter/: contributions.md  profile.md
docs/developer/: architecture.md  contributing.md  index.md
docs/javascripts/: extra.js
docs/theory/: barriers.md  eda.md  g_ni.md  index.md  kinetics_and_barriers.md
docs/user-guide/: cli.md  clusters.md  configuration.md  index.md  installation.md  tutorial.md
examples/diels-alder/: .gitignore  README.md  config.yaml
examples/diels-alder/templates/: base_template.in
examples/diels-alder/templates/molecule/: bf3.xyz  buta13diene.xyz  cyclohex3ene1carbaldehyde.xyz  postTS_bf3-cyclohex3ene1carbaldehyde.xyz  preTS_bf3-prop2enal.xyz  prop2enal.xyz  ts_bf3-tscomplex.xyz  tscomplex.xyz
examples/diels-alder/templates/rem/: frz_cat.rem  full_cat.rem  geom_opt.rem  opt_base.rem  pol_cat.rem  solvent_smd.rem  sp_eda_base.rem
scripts/: dimer_correction.py  dump_slurm.py
src/PyA3EDA/: cli.py
src/PyA3EDA/core/: constants.py
src/PyA3EDA/core/builders/: builder.py  molecule_builder.py  rem_builder.py
src/PyA3EDA/core/config/: config_manager.py
src/PyA3EDA/core/exporters/: data_exporter.py
src/PyA3EDA/core/extractors/: __init__.py  data_extractor.py  delta_delta_extractor.py  old_data_extractor.py  profile_extractor.py  profile_extractor_functional.py
src/PyA3EDA/core/parsers/: output_xyz_parser.py  qchem_result_parser.py  qchem_status_parser.py  xyz_parser.py
src/PyA3EDA/core/plotters/: __init__.py  barplot_plotter.py  profile_plotter.py
src/PyA3EDA/core/runners/: __init__.py  executor.py
src/PyA3EDA/core/status/: __init__.py  status_checker.py
src/PyA3EDA/core/utils/: argument_parser.py  file_utils.py  thermodynamics.py  unit_converter.py  xyz_format_utils.py
src/PyA3EDA/core/workflow/: workflow_manager.py
src/pya3eda/: __init__.py  __main__.py  cli.py  config.py  constants.py  errors.py  ids.py  pipeline.py  registry.py  sanitize.py  utils.py  vocab.py
src/pya3eda/builder/: __init__.py  inputs.py  molecule.py  rem.py
src/pya3eda/exporter/: __init__.py  results.py
src/pya3eda/extractor/: __init__.py  barriers.py  data.py  dimer.py  stages.py
src/pya3eda/parser/: __init__.py  qchem.py  xyz.py
src/pya3eda/plotter/: __init__.py  contributions.py  profile.py
src/pya3eda/registry/: __init__.py  _common.py  calcs.py  paths.py  profiles.py
src/pya3eda/runner/: __init__.py  backend.py  clusters.py  engine.py  executor.py  script.py  throttle.py
src/pya3eda/status/: __init__.py  checker.py
src/qqchem/: __init__.py  __main__.py  cli.py  clusters.py  qchem_input.py  slurm.py
tests/: conftest.py  golden_slurm.py  registry_dump.py  registry_snapshot.txt  slurm_cases.py  synthetic_outputs.py  test_backend.py  test_builder.py  test_cli.py  test_clusters.py  test_config.py  test_dimer.py  test_dimer_correction.py  test_engine.py  test_exporter.py  test_extractor.py  test_ids.py  test_parser_qchem.py  test_parser_xyz.py  test_pipeline.py  test_plotter.py  test_qqchem_cli.py  test_qqchem_clusters.py  test_qqchem_input.py  test_qqchem_slurm.py  test_registry.py  test_registry_snapshot.py  test_runner.py  test_sanitize.py  test_script.py  test_slurm_golden.py  test_startup.py  test_status.py  test_throttle.py  test_utils.py
tests/data/golden/: base_openmp.slurm  cluster_juno.slurm  envvars.slurm  exclude.slurm  nodelist.slurm  openmp_cpus4.slurm  openmpi.slurm  openmpi_serial.slurm  qcsetup.slurm  save.slurm  save_all.slurm  save_scratch.slurm  save_scratch_custom.slurm  scratch_set.slurm
