[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pya3eda"
version = "0.1.0.dev2"
description = "Python automation for Asymmetrically-constrained Adiabatic ALMO-EDA (A3EDA)"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Markus-G-S-Weiss", email = "markus.guenter.weiss@rwth-aachen.de" },
]
keywords = [
    "computational chemistry",
    "quantum chemistry",
    "energy decomposition analysis",
    "ALMO-EDA",
    "Q-Chem",
    "catalysis",
    "automation",
    "HPC",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    # Floors are the lowest versions with wheels for every supported Python
    # (3.11-3.13); pin them so the resolver and CI agree on a viable matrix.
    "pydantic>=2.5",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "matplotlib>=3.7",
    "numpy>=1.26",
    "typer>=0.12",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "interrogate>=1.7",
]
# Convenience superset for contributors: cross-references [test] and [docs]
# so their pinned tools (pytest, interrogate, ...) have a single source of
# truth, plus the linting tools that have no separate extra of their own.
# ruff is floored to track the pre-commit `ruff-pre-commit` rev.
dev = [
    "pya3eda[test,docs]",
    "ruff>=0.15",
    "mypy>=1.11",
    "types-PyYAML",
    "pandas-stubs>=2.2",
    "pre-commit>=3.5",
]

[project.urls]
Homepage = "https://github.com/sterling-group/PyA3EDA"
Documentation = "https://sterling-group.github.io/PyA3EDA/"
Repository = "https://github.com/sterling-group/PyA3EDA.git"
Issues = "https://github.com/sterling-group/PyA3EDA/issues"

[project.scripts]
pya3eda = "pya3eda.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pya3eda"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pya3eda",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: tests that take longer than 1 second",
    "integration: tests that invoke real Q-Chem / SLURM / external services",
]

[tool.coverage.run]
# Line *and* branch coverage gate.
source = ["pya3eda"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.interrogate]
# Docstring-coverage gate (matches the CI docs job).
ignore-init-module = true
ignore-init-method = true
ignore-magic = true
ignore-nested-functions = true
fail-under = 100
exclude = ["tests", "examples", "build", "dist"]

[tool.mypy]
# Target 3.12 so mypy parses third-party stubs that use the PEP 695 ``type X = …``
# statement (e.g. numpy>=2.5's ``numpy/__init__.pyi``). Runtime support stays at
# ``requires-python = ">=3.11"`` and is exercised by the 3.11/3.12/3.13 test matrix.
python_version = "3.12"
plugins = ["pydantic.mypy"]
files = ["src"]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "PTH", "RET", "C4", "TID", "ARG"]

[tool.ruff.lint.per-file-ignores]
# Test doubles implement the backend Protocols (unused `job_id` / `log_path`) and
# fixtures are taken for their side effects (`monkeypatch`, prepared configs).
"tests/*" = ["ARG"]
